practice/nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
